--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yapee</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%9B%8D%EF%B8%8F%3C/text%3E%3C/svg%3E" />
 
-    <!-- Google Fonts -->
+
+    <!-- Google Fonts - Async loading with font-display=swap -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap&font-display=swap"
       rel="stylesheet"
+      media="print" onload="this.media='all'"
     />
 
-    <!-- Material Symbols -->
+    <!-- Material Symbols - Separate loading to prevent conflicts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=block"
       rel="stylesheet"
+      media="print" onload="this.media='all'"
     />
 
     <!-- Tailwind CSS -->
@@ -71,16 +75,16 @@
     <script type="importmap">
       {
         "imports": {
-          "react/": "https://esm.sh/react@^19.2.3/",
-          "react": "https://esm.sh/react@^19.2.3",
-          "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-          "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+          "react/": "https://esm.sh/react@^18.2.0/",
+          "react": "https://esm.sh/react@^18.2.0",
+          "react-router-dom": "https://esm.sh/react-router-dom@^6.22.3",
+          "react-dom/": "https://esm.sh/react-dom@^18.2.0/",
           "express": "https://esm.sh/express@^5.2.1",
           "cors": "https://esm.sh/cors@^2.8.5",
-          "dotenv": "https://esm.sh/dotenv@^17.2.3",
-          "@prisma/client": "https://esm.sh/@prisma/client@^7.2.0",
-          "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-          "vite": "https://esm.sh/vite@^7.3.0"
+          "dotenv": "https://esm.sh/dotenv@^16.4.5",
+          "@prisma/client": "https://esm.sh/@prisma/client@^5.10.2",
+          "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.2.1",
+          "vite": "https://esm.sh/vite@^5.1.5"
         }
       }
     </script>
